--- a/versions.cfg
+++ b/versions.cfg
@@ -118,3 +118,19 @@ collective.easyform = 2.0.0b5
 # imioweb.policy==1.0a1
 collective.preventactions = 0.2.1
 collective.recipe.backup = 4.0.1
+
+# Required by:
+# imioweb.policy==1.0a1.dev0
+collective.editablemenu = 2.0.0
+
+# Required by:
+# imioweb.policy==1.0a1.dev0
+collective.registration = 1.0a1
+
+Products.PythonField = 1.1.3
+Products.TALESField = 1.1.3
+Products.TemplateFields = 1.2.5
+
+# Required by:
+# collective.registration==1.0a1
+Products.PloneFormGen = 1.8.5
