Use new nexus index

--- a/base.cfg
+++ b/base.cfg
@@ -12,7 +12,7 @@ extends =
     sources.cfg
     versions.cfg
 
-index = http://devpi.imio.be/root/imio/+simple/
+index = https://nexus.imio.be/repository/pypi-all/simple
 versions = versions
 
 [instance]
