Use banner 1.1 version instead of imio

--- a/versions.cfg
+++ b/versions.cfg
@@ -6,7 +6,7 @@ plone.recipe.zope2instance = 4.4
 imioweb.theme = 1.0a1
 imioweb.policy = 1.0a1
 collective.behavior.gallery = 1.0a6
-collective.behavior.banner = 1.0b3+imio
+collective.behavior.banner = 1.1
 collective.z3cform.select2 = 2.0.1
 
 Products.PDBDebugMode = 1.3.1
