Add collective.faceted.taxonomywidget on autocheckout

--- a/dev.cfg
+++ b/dev.cfg
@@ -8,6 +8,7 @@ extensions =
 auto-checkout =
     imioweb.policy
     imioweb.theme
+    collective.faceted.taxonomywidget
 
 [instance]
 debug-mode = on
