--- a/base.cfg
+++ b/base.cfg
@@ -12,7 +12,8 @@ extends =
     sources.cfg
     versions.cfg
 
-index = https://nexus.imio.be/repository/pypi-all/simple
+index = http://devpi.imio.be/root/imio/+simple/
+; index = https://nexus.imio.be/repository/pypi-all/simple
 versions = versions
 
 [instance]
