Update policy version to include iaweb.mosaic package

--- a/versions.cfg
+++ b/versions.cfg
@@ -4,7 +4,7 @@ zc.buildout = 2.11.3
 plone.recipe.zope2instance = 4.4
 
 imioweb.theme = 1.0a2
-imioweb.policy = 1.0a2
+imioweb.policy = 1.0b1
 collective.behavior.gallery = 1.0a6
 collective.behavior.banner = 1.1
 collective.z3cform.select2 = 2.0.1
@@ -134,3 +134,4 @@ Products.TemplateFields = 1.2.5
 # Required by:
 # collective.registration==1.0a1
 Products.PloneFormGen = 1.8.5
+iaweb.mosaic = 1.0a1
