Update backup location

--- a/backup.cfg
+++ b/backup.cfg
@@ -4,6 +4,6 @@ parts +=
 
 [backup]
 recipe = collective.recipe.backup
-location = ${buildout:directory}/backups/filestorage
+location = ${buildout:directory}/var/backups/filestorage
 blob-storage = ${buildout:directory}/var/blobstorage
 blobbackuplocation = ${buildout:directory}/backups/blobstorage
