Add iaweb.mosaic to sources

--- a/dev.cfg
+++ b/dev.cfg
@@ -9,6 +9,7 @@ auto-checkout =
     imioweb.policy
     imioweb.theme
     collective.faceted.taxonomywidget
+    iaweb.mosaic
 
 [instance]
 debug-mode = on
