--- a/sources.cfg
+++ b/sources.cfg
@@ -11,3 +11,4 @@ collective.faceted.taxonomywidget = git ${remotes:imio}/collective.faceted.taxon
 imioweb.policy = git ${remotes:imio}/imioweb.policy.git pushurl=${remotes:imio_push}/imioweb.policy.git
 imioweb.theme = git ${remotes:imio}/imioweb.theme.git pushurl=${remotes:imio_push}/imioweb.theme.git
 collective.behavior.banner = git ${remotes:collective}/collective.behavior.banner.git pushurl=${remotes:collective_push}/collective.behavior.banner.git
+iaweb.mosaic = git ${remotes:imio}/iaweb.mosaic.git pushurl=${remotes:imio_push}/iaweb.mosaic.git
