Use Plone 5-latest

--- a/base.cfg
+++ b/base.cfg
@@ -6,9 +6,10 @@ parts =
     instance
     upgrade
     omelette
+    zodbupdate
 
 extends =
-    https://dist.plone.org/release/5.1.5/versions.cfg
+    https://dist.plone.org/release/5-latest/versions.cfg
     sources.cfg
     versions.cfg
 
@@ -25,6 +26,7 @@ environment-vars =
 eggs =
     Plone
     imioweb.policy
+    zodbverify
 zcml =
     imioweb.policy
 
@@ -44,3 +46,9 @@ arguments = args=[
 eggs =
     ipdb
     Products.PDBDebugMode
+
+[zodbupdate]
+recipe = zc.recipe.egg
+eggs =
+    zodbupdate
+    ${instance:eggs}
