--- a/dev.cfg
+++ b/dev.cfg
@@ -10,6 +10,8 @@ auto-checkout =
     imioweb.theme
     collective.faceted.taxonomywidget
     iaweb.mosaic
+    collective.preventactions
+    collective.taxonomy
 
 [instance]
 debug-mode = on
