Add mr developer to prod.cfg

--- a/prod.cfg
+++ b/prod.cfg
@@ -3,9 +3,19 @@ extends =
     backup.cfg
     base.cfg
 
-allow-picked-versions = false
+extensions =
+    mr.developer
+
 parts +=
     zeoserver
+
+auto-checkout =
+    imioweb.policy
+    imioweb.theme
+    collective.faceted.taxonomywidget
+    iaweb.mosaic
+    collective.preventactions
+    collective.taxonomy
 
 [zeoserver]
 recipe = plone.recipe.zeoserver
