--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - 8100
     healthcheck:
       # test: ["CMD-SHELL", "nc", "-z", "w5", "127.0.0.1", "8100", "||", "exit", "1"]
-      test: ["CMD", "nc", "-z", "-w5", "127.0.0.1", "8100"]
+      test: ['CMD', 'nc', '-z', '-w5', '127.0.0.1', '8100']
   instance:
     image: imioweb
     expose:
@@ -25,18 +25,18 @@ services:
     deploy:
       replicas: 2
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.instance.rule=Host(`portal.localhost`)"
-      - "traefik.http.routers.instance.entrypoints=web"
-      - "traefik.http.services.instance.loadbalancer.server.port=8080"
+      - 'traefik.enable=true'
+      - 'traefik.http.routers.instance.rule=Host(`portal.localhost`)'
+      - 'traefik.http.routers.instance.entrypoints=web'
+      - 'traefik.http.services.instance.loadbalancer.server.port=8080'
   reverseproxy:
     image: traefik:2.0
     command:
-      - "--api.insecure=true"
-      - "--providers.docker=true"
-      - "--entryPoints.web.address=:80"
+      - '--api.insecure=true'
+      - '--providers.docker=true'
+      - '--entryPoints.web.address=:80'
     ports:
-      - "80:80"     # The HTTP port
-      - "8000:8080" # The Web UI (enabled by --api)
+      - '80:80' # The HTTP port
+      - '8000:8080' # The Web UI (enabled by --api)
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock # So that Traefik can listen to the Docker events
