--- a/versions.cfg
+++ b/versions.cfg
@@ -4,6 +4,7 @@ imioweb.policy = 1.0b1
 setuptools = 41.0.1
 zc.buildout = 2.13.2
 collective.recipe.backup = 4.1.1
+collective.taxonomy = 2.0
 eea.faceted.vocabularies = 6.9
 eea.jquery = 11.1
 plone.app.jquery = 1.11.2
@@ -13,4 +14,4 @@ collective.behavior.gallery = 1.0a6
 collective.easyform = 2.1.2
 eea.facetednavigation = 13.5
 plone.app.imagecropping = 2.2.1
-plone.app.themingplugins = 1.1 
+plone.app.themingplugins = 1.1
