Use last release of collective.preventactions

--- a/prod.cfg
+++ b/prod.cfg
@@ -14,7 +14,6 @@ auto-checkout =
     imioweb.theme
     collective.faceted.taxonomywidget
     iaweb.mosaic
-    collective.preventactions
 
 [zeoserver]
 recipe = plone.recipe.zeoserver
@@ -23,8 +22,8 @@ zeo-address = 8100
 pack-days = 7
 pack-keep-old = false
 zeo-conf-additional =
-  %define FILESTORAGE /home/imio/plone/var/filestorage
-  %define BLOBSTORAGE /home/imio/plone/var/blobstorage
+  %define FILESTORAGE /plone/filestorage
+  %define BLOBSTORAGE /plone/blobstorage
 
 [instance]
 http-address = 8080
