--- a/sources.cfg
+++ b/sources.cfg
@@ -12,5 +12,5 @@ imioweb.policy = git ${remotes:imio}/imioweb.policy.git pushurl=${remotes:imio_p
 imioweb.theme = git ${remotes:imio}/imioweb.theme.git pushurl=${remotes:imio_push}/imioweb.theme.git
 collective.behavior.banner = git ${remotes:collective}/collective.behavior.banner.git pushurl=${remotes:collective_push}/collective.behavior.banner.git
 iaweb.mosaic = git ${remotes:imio}/iaweb.mosaic.git pushurl=${remotes:imio_push}/iaweb.mosaic.git
-collective.preventactions = git ${remotes:collective}/collective.preventactions.git pushurl=${remotes:collective_push}/collective.preventactions.git branch=python3
+collective.preventactions = git ${remotes:collective}/collective.preventactions.git pushurl=${remotes:collective_push}/collective.preventactions.git
 collective.taxonomy = git ${remotes:collective}/collective.taxonomy.git pushurl=${remotes:collective_push}/collective.taxonomy.git
