Add  migration script from plone 5.1 to plone 5.2 python3.

--- a/base.cfg
+++ b/base.cfg
@@ -25,6 +25,7 @@ environment-vars =
   TZ Europe/Brussels
 eggs =
     Plone
+    ConfigParser
     imioweb.policy
     zodbverify
 zcml =
@@ -44,8 +45,11 @@ arguments = args=[
 
 [debug-products]
 eggs =
-    ipdb
     Products.PDBDebugMode
+    iw.debug
+    ipdb
+zcml =
+    iw.debug
 
 [zodbupdate]
 recipe = zc.recipe.egg
