Add collective.upgrade to buildout

--- a/dev.cfg
+++ b/dev.cfg
@@ -10,6 +10,7 @@ auto-checkout =
     imioweb.theme
     collective.faceted.taxonomywidget
     iaweb.mosaic
+    collective.upgrade
 
 [instance]
 debug-mode = on
