--- a/sources.cfg
+++ b/sources.cfg
@@ -14,3 +14,4 @@ collective.behavior.banner = git ${remotes:collective}/collective.behavior.banne
 iaweb.mosaic = git ${remotes:imio}/iaweb.mosaic.git pushurl=${remotes:imio_push}/iaweb.mosaic.git
 collective.preventactions = git ${remotes:collective}/collective.preventactions.git pushurl=${remotes:collective_push}/collective.preventactions.git
 collective.taxonomy = git ${remotes:collective}/collective.taxonomy.git pushurl=${remotes:collective_push}/collective.taxonomy.git
+collective.upgrade = git ${remotes:collective}/collective.upgrade.git pushurl=${remotes:collective_push}/collective.upgrade.git
