Blobstorage are on /data folder for backup

--- a/backup.cfg
+++ b/backup.cfg
@@ -5,5 +5,5 @@ parts +=
 [backup]
 recipe = collective.recipe.backup
 location = ${buildout:directory}/var/backups/filestorage
-blob-storage = ${buildout:directory}/var/blobstorage
+blob-storage = /data/blobstorage
 blobbackuplocation = ${buildout:directory}/backups/blobstorage
