set collective.upgrade on auto-checkout

--- a/prod.cfg
+++ b/prod.cfg
@@ -13,6 +13,7 @@ auto-checkout =
     imioweb.theme
     collective.faceted.taxonomywidget
     iaweb.mosaic
+    collective.upgrade
 
 [zeoserver]
 recipe = plone.recipe.zeoserver
