Add policy to dev auto-checkout

--- a/dev.cfg
+++ b/dev.cfg
@@ -7,6 +7,7 @@ extensions =
 
 always-checkout = true
 auto-checkout =
+    imioweb.policy
     imioweb.theme
     collective.faceted.taxonomywidget
     iaweb.mosaic
