--- a/backup.cfg
+++ b/backup.cfg
@@ -6,4 +6,4 @@ parts +=
 recipe = collective.recipe.backup
 location = ${buildout:directory}/var/backups/filestorage
 blob-storage = /data/blobstorage
-blobbackuplocation = ${buildout:directory}/backups/blobstorage
+blobbackuplocation = ${buildout:directory}/var/backups/blobstorage
