Add http-fast-listen = off buildout option

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - ZEO_PORT=8100
     volumes:
       - ./data/blobstorage:/data/blobstorage
+    ports:
+      - 8080
     deploy:
       replicas: 2
     labels:
