--- a/prod.cfg
+++ b/prod.cfg
@@ -32,3 +32,5 @@ blob-storage = /data/blobstorage
 shared-blob = on
 zodb-cache-size = 30000
 zeo-client-cache-size = 256MB
+# defer early binding to port; may improve load balancer behavior on restarts
+http-fast-listen = off
