Set version of theme and policy

--- a/versions.cfg
+++ b/versions.cfg
@@ -9,10 +9,11 @@ eea.faceted.vocabularies = 6.9
 eea.facetednavigation = 13.5
 eea.jquery = 11.1
 imioweb.policy = 1.0b2
-imioweb.theme = 1.0a2
+imioweb.theme = 1.0b1
 plone.app.imagecropping = 2.2.1
 plone.app.jquery = 1.11.2
 plone.app.themingplugins = 1.1
 Products.validation = 2.1.1
 setuptools = 41.0.1
 zc.buildout = 2.13.2
+iaweb-mosaic = 1.0a3
