--- a/dev.cfg
+++ b/dev.cfg
@@ -10,6 +10,8 @@ auto-checkout =
     imioweb.policy
     imioweb.theme
     collective.upgrade
+    pas.plugins.imio
+    pas.plugins.authomatic
 
 [instance]
 debug-mode = on
