--- a/sources.cfg
+++ b/sources.cfg
@@ -15,3 +15,5 @@ iaweb.mosaic = git ${remotes:imio}/iaweb.mosaic.git pushurl=${remotes:imio_push}
 collective.preventactions = git ${remotes:collective}/collective.preventactions.git pushurl=${remotes:collective_push}/collective.preventactions.git
 collective.taxonomy = git ${remotes:collective}/collective.taxonomy.git pushurl=${remotes:collective_push}/collective.taxonomy.git
 collective.upgrade = git ${remotes:collective}/collective.upgrade.git pushurl=${remotes:collective_push}/collective.upgrade.git
+pas.plugins.imio = git ${remotes:imio}/pas.plugins.imio.git pushurl=${remotes:imio_push}/pas.plugins.imio.git
+pas.plugins.authomatic = git ${remotes:imio}/pas.plugins.authomatic.git pushurl=${remotes:imio_push}/pas.plugins.authomatic.git
