--- a/versions.cfg
+++ b/versions.cfg
@@ -8,8 +8,9 @@ collective.taxonomy = 2.0
 eea.faceted.vocabularies = 6.9
 eea.facetednavigation = 13.5
 eea.jquery = 11.1
-imioweb.policy = 1.0b2
+imioweb.policy = 1.0b3
 imioweb.theme = 1.0b1
+pas.plugins.imio = 1.0b1
 plone.app.imagecropping = 2.2.1
 plone.app.jquery = 1.11.2
 plone.app.themingplugins = 1.1
