--- a/base.cfg
+++ b/base.cfg
@@ -1,5 +1,4 @@
 [buildout]
-
 show-picked-versions = true
 
 parts =
@@ -27,6 +26,7 @@ eggs =
     ConfigParser
     imioweb.policy
     collective.upgrade
+    Products.PloneHotfix20200121
 zcml =
     imioweb.policy
 
