--- a/versions.cfg
+++ b/versions.cfg
@@ -1,13 +1,6 @@
 [versions]
-collective.behavior.banner = 1.2
-collective.behavior.gallery = 1.0a6
-collective.easyform = 2.1.2
 collective.preventactions = 0.3.0
 collective.recipe.backup = 4.1.1
-collective.taxonomy = 2.0
-eea.faceted.vocabularies = 6.9
-eea.facetednavigation = 13.5
-eea.jquery = 11.1
 imioweb.policy = 1.0b3
 imioweb.theme = 1.0b3
 pas.plugins.imio = 1.0b1
@@ -18,3 +11,6 @@ Products.validation = 2.1.1
 setuptools = 41.0.1
 zc.buildout = 2.13.2
 iaweb-mosaic = 1.0a3
+
+# hotfix
+Products.PloneHotfix20200121 = 1.0
