--- a/dev.cfg
+++ b/dev.cfg
@@ -12,6 +12,7 @@ auto-checkout =
     collective.upgrade
     pas.plugins.imio
     pas.plugins.authomatic
+    collective.faceted.map
 
 [instance]
 debug-mode = on
