--- a/sources.cfg
+++ b/sources.cfg
@@ -3,6 +3,8 @@ imio = git://github.com/IMIO
 imio_push = git@github.com:IMIO
 collective = git://github.com/collective
 collective_push = git@github.com:collective
+affinitic = git://github.com/affinitic
+affinitic_push = git@github.com:affinitic
 
 
 [sources]
@@ -17,3 +19,5 @@ collective.taxonomy = git ${remotes:collective}/collective.taxonomy.git pushurl=
 collective.upgrade = git ${remotes:collective}/collective.upgrade.git pushurl=${remotes:collective_push}/collective.upgrade.git
 pas.plugins.imio = git ${remotes:imio}/pas.plugins.imio.git pushurl=${remotes:imio_push}/pas.plugins.imio.git
 pas.plugins.authomatic = git ${remotes:imio}/pas.plugins.authomatic.git pushurl=${remotes:imio_push}/pas.plugins.authomatic.git
+
+collective.faceted.map = git ${remotes:affinitic}/collective.faceted.map.git pushurl=${remotes:affinitic_push}/collective.faceted.map.git
