--- a/versions.cfg
+++ b/versions.cfg
@@ -12,5 +12,7 @@ setuptools = 41.2.0
 zc.buildout = 2.13.2
 iaweb-mosaic = 1.0a3
 
+plone.patternslib = 1.1.0.1
+
 # hotfix
 Products.PloneHotfix20200121 = 1.0
