Pin collective.faceted.map version

--- a/versions.cfg
+++ b/versions.cfg
@@ -1,4 +1,5 @@
 [versions]
+collective.faceted.map = 1.0b1
 collective.preventactions = 0.3.0
 collective.recipe.backup = 4.1.1
 imioweb.policy = 1.0b4
