Add imioweb core

--- a/dev.cfg
+++ b/dev.cfg
@@ -8,10 +8,12 @@ extensions =
 always-checkout = true
 auto-checkout =
     imioweb.policy
+    imioweb.core
     imioweb.theme
     collective.upgrade
     pas.plugins.imio
     pas.plugins.authomatic
+    collective.faceted.map
 
 [instance]
 debug-mode = on
