--- a/sources.cfg
+++ b/sources.cfg
@@ -11,6 +11,7 @@ affinitic_push = git@github.com:affinitic
 # from IMIO
 collective.faceted.taxonomywidget = git ${remotes:imio}/collective.faceted.taxonomywidget.git pushurl=${remotes:imio_push}/collective.faceted.taxonomywidget.git
 imioweb.policy = git ${remotes:imio}/imioweb.policy.git pushurl=${remotes:imio_push}/imioweb.policy.git
+imioweb.core = git ${remotes:imio}/imioweb.core.git pushurl=${remotes:imio_push}/imioweb.core.git
 imioweb.theme = git ${remotes:imio}/imioweb.theme.git pushurl=${remotes:imio_push}/imioweb.theme.git
 collective.behavior.banner = git ${remotes:collective}/collective.behavior.banner.git pushurl=${remotes:collective_push}/collective.behavior.banner.git
 iaweb.mosaic = git ${remotes:imio}/iaweb.mosaic.git pushurl=${remotes:imio_push}/iaweb.mosaic.git
