Update policy version

--- a/versions.cfg
+++ b/versions.cfg
@@ -2,7 +2,8 @@
 collective.faceted.map = 1.0b1
 collective.preventactions = 0.3.0
 collective.recipe.backup = 4.1.1
-imioweb.policy = 1.0b4
+imioweb.core = 1.0a1
+imioweb.policy = 1.0b5
 imioweb.theme = 1.0b3
 pas.plugins.imio = 1.0b1
 plone.app.imagecropping = 2.2.1
