--- a/versions.cfg
+++ b/versions.cfg
@@ -1,20 +1,89 @@
 [versions]
-collective.faceted.map = 1.0b1
-collective.preventactions = 0.3.0
-collective.recipe.backup = 4.1.1
-imioweb.core = 1.0a1
+Authomatic = 1.0.0
+Products.PloneHotfix20200121 = 1.0
+collective.upgrade = 1.5
+eea.faceted.vocabularies = 6.9
+eea.jquery = 11.1
 imioweb.policy = 1.0b5
-imioweb.theme = 1.0b3
-pas.plugins.imio = 1.0b1
-plone.app.imagecropping = 2.2.1
 plone.app.jquery = 1.11.2
-plone.app.themingplugins = 1.1
-Products.validation = 2.1.1
+plone.patternslib = 1.1.0.1
 setuptools = 41.2.0
 zc.buildout = 2.13.2
-iaweb-mosaic = 1.0a3
 
-plone.patternslib = 1.1.0.1
+# Required by:
+# collective.easyform==2.1.3
+Products.validation = 2.1.1
 
-# hotfix
-Products.PloneHotfix20200121 = 1.0
+# Required by:
+# imioweb.policy==1.0b5
+collective.behavior.banner = 1.2
+
+# Required by:
+# imioweb.policy==1.0b5
+collective.behavior.gallery = 1.0a6
+
+# Required by:
+# imioweb.policy==1.0b5
+collective.easyform = 2.1.3
+
+# Required by:
+# imioweb.policy==1.0b5
+collective.faceted.map = 1.0b1
+
+# Required by:
+# imioweb.policy==1.0b5
+collective.faceted.taxonomywidget = 1.0a5
+
+# Required by:
+# collective.faceted.map==1.0b1
+collective.geolocationbehavior = 1.7.0
+
+# Required by:
+# imioweb.policy==1.0b5
+collective.preventactions = 0.3.0
+
+# Required by:
+# imioweb.core==1.0a1
+collective.taxonomy = 2.0.0
+
+# Required by:
+# pas.plugins.imio==1.0b1
+cryptography = 2.8
+
+# Required by:
+# collective.faceted.map==1.0b1
+# collective.faceted.taxonomywidget==1.0a5
+# imioweb.policy==1.0b5
+eea.facetednavigation = 13.5
+
+# Required by:
+# imioweb.policy==1.0b5
+iaweb.mosaic = 1.0a3
+
+# Required by:
+# imioweb.policy==1.0b5
+imioweb.core = 1.0a1
+
+# Required by:
+# imioweb.policy==1.0b5
+imioweb.theme = 1.0b3
+
+# Required by:
+# pas.plugins.imio==1.0b1
+pas.plugins.authomatic = 1.0b201
+
+# Required by:
+# imioweb.policy==1.0b5
+pas.plugins.imio = 1.0b1
+
+# Required by:
+# imioweb.policy==1.0b5
+plone.app.imagecropping = 2.2.1
+
+# Required by:
+# imioweb.theme==1.0b3
+plone.app.themingplugins = 1.1
+
+# Required by:
+# collective.geolocationbehavior==1.7.0
+plone.formwidget.geolocation = 2.2.1
