Pin sendinblue related dependencies

--- a/versions.cfg
+++ b/versions.cfg
@@ -1,6 +1,7 @@
 [versions]
 Authomatic = 1.0.0
 Products.PloneHotfix20200121 = 1.0
+collective.sendinblue = 2.0
 collective.upgrade = 1.5
 eea.faceted.vocabularies = 6.9
 eea.jquery = 11.1
@@ -87,3 +88,8 @@ plone.app.themingplugins = 1.1
 # Required by:
 # collective.geolocationbehavior==1.7.0
 plone.formwidget.geolocation = 2.2.1
+
+# Required by:
+# collective.sendinblue==2.0
+Sendinblue = 2.0.5.1
+plone.formwidget.recaptcha = 2.2.0
