Update pas plugin imio

--- a/base.cfg
+++ b/base.cfg
@@ -10,8 +10,9 @@ extends =
     sources.cfg
     versions.cfg
 
+# find-links = http://devpi.imio.be/root/imio/+findlinks
 index = http://devpi.imio.be/root/imio/+simple/
-; index = https://nexus.imio.be/repository/pypi-all/simple
+# index = https://nexus.imio.be/repository/pypi-all/simple
 versions = versions
 
 [instance]
