--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,30 @@
-var/
+.Python
+.installed.cfg
+.mr.developer.cfg
+.plone.versioncheck.tracked.json
+bin/
+develop-eggs/
+include/
+lib/
 parts/
-data/
+src/
+buildout.cfg
+tmp/
+build-stamp
+debian/
+debian.ini
+var/
+upgrade.log
+buildout-cache/
+Extensions/*
+share/
+.tags
+pip-selfcheck.json
+local/
+.env
+nginx.conf
+rsync.sh
+eggs/
+data
+lib64
+pyvenv.cfg
