Add var env for testing prod

--- a/.envrc
+++ b/.envrc
@@ -7,3 +7,5 @@ export authentic_agents_hostname=agents.staging.imio.be
 export service_ou=80265465464
 export service_slug=localhost
 export application_id=iasmartweb
+export ZEO_HOST=0.0.0.0
+export ZEO_PORT=8100
