Add LOGS_SERVER env var

--- a/.envrc
+++ b/.envrc
@@ -4,8 +4,9 @@ export consumer_secret_usagers=45
 export consumer_secret_agents=5e32caf1-ea5c-4993-a25f-7b09ca8cbaeb
 export authentic_usagers_hostname=usagers.staging.imio.be
 export authentic_agents_hostname=agents.staging.imio.be
-export service_ou=80265465464
-export service_slug=localhost
+export service_ou=0841470248
+export service_slug=localhost-iasmartweb
 export application_id=iasmartweb
 export ZEO_HOST=0.0.0.0
 export ZEO_PORT=8100
+export LOGS_SERVER=localhost:5544
