Always checkout on dev

--- a/dev.cfg
+++ b/dev.cfg
@@ -5,7 +5,8 @@ extends =
 extensions =
     mr.developer
 
-always-checkout = true
+always-checkout = force
+
 auto-checkout =
     imioweb.policy
     imioweb.core
