Add event log custom for prod instances
LOGS_SERVER env variable should be set on prod

--- a/.envrc
+++ b/.envrc
@@ -10,3 +10,5 @@ export application_id=iasmartweb
 export ZEO_HOST=0.0.0.0
 export ZEO_PORT=8100
 export LOGS_SERVER=localhost:5544
+export HOSTNAME_HOST=localhost
+export PROJECT_ID=localhost_imioweb
