--- a/prod.cfg
+++ b/prod.cfg
@@ -32,3 +32,16 @@ zodb-cache-size = 30000
 zeo-client-cache-size = 256MB
 # defer early binding to port; may improve load balancer behavior on restarts
 http-fast-listen = off
+
+event-log-custom =
+    <syslog>
+        address $(LOGS_SERVER)
+        facility local3
+        format %(asctime)s $(HOSTNAME_HOST) zope[%(process)s]: $(PROJECT_ID) ${:_buildout_section_name_} [%(levelname)s] %(name)s | %(message)s
+        dateformat %b %d %H:%M:%S
+        level info
+    </syslog>
+    <logfile>
+        path ${buildout:directory}/var/log/${:_buildout_section_name_}.log
+        level info
+    </logfile>
