Add instance-debug for prod

--- a/prod.cfg
+++ b/prod.cfg
@@ -8,10 +8,15 @@ extensions =
 
 parts +=
     zeoserver
+    instance-debug
 
 auto-checkout =
     collective.upgrade
     pas.plugins.authomatic
+
+allow-picked-versions = false
+
+#update-versions-file = versions-tmp.cfg
 
 [zeoserver]
 recipe = plone.recipe.zeoserver
@@ -41,6 +46,23 @@ event-log-custom =
         dateformat %b %d %H:%M:%S
         level info
     </syslog>
+    <logfile>
+        path ${buildout:directory}/var/log/${:_buildout_section_name_}.log
+        level info
+    </logfile>
+
+[instance-debug]
+<= instance
+debug-mode = on
+verbose-security = on
+environment-vars +=
+    ENABLE_PRINTING_MAILHOST True
+eggs =
+    ${instance:eggs}
+    ${debug-products:eggs}
+zcml =
+    ${instance:zcml}
+event-log-custom =
     <logfile>
         path ${buildout:directory}/var/log/${:_buildout_section_name_}.log
         level info
