--- a/versions.cfg
+++ b/versions.cfg
@@ -1,69 +1,52 @@
 [versions]
-Authomatic = 1.0.0
-Products.PloneHotfix20200121 = 1.0
-collective.sendinblue = 2.0
-collective.upgrade = 1.5
-eea.faceted.vocabularies = 6.9
-eea.jquery = 11.1
-imioweb.policy = 1.0b6
-plone.app.jquery = 1.11.2
-plone.patternslib = 1.1.0.3
 setuptools = 41.2.0
 zc.buildout = 2.13.2
 
-# Required by:
-# collective.easyform==2.1.3
+Authomatic = 1.0.0
+Products.PloneHotfix20200121 = 1.0
 Products.validation = 2.1.1
-
-# Required by:
-# imioweb.policy==1.0b6
+Sendinblue = 2.0.5.1
+backcall = 0.1.0
 collective.behavior.banner = 1.2
 collective.behavior.gallery = 1.0a6
 collective.easyform = 2.1.3
 collective.faceted.map = 1.0b3
 collective.faceted.taxonomywidget = 1.0a5
-collective.preventactions = 0.3.0
-iaweb.mosaic = 1.0a7
-imioweb.core = 1.0a3
-imioweb.theme = 1.0b8
-pas.plugins.imio = 1.0b8
-plone.app.imagecropping = 2.2.1
-
-# Required by:
-# collective.faceted.map==1.0b1
 collective.geolocationbehavior = 1.7.0
-
-# Required by:
-# imioweb.core==1.0a2
+collective.preventactions = 0.3.0
+collective.recipe.backup = 4.1.1
+collective.sendinblue = 2.0
 collective.taxonomy = 2.0.0
-
-# Required by:
-# pas.plugins.imio==1.0b1
+collective.upgrade = 1.5
 cryptography = 2.8
-
-# Required by:
-# collective.faceted.map==1.0b1
-# collective.faceted.taxonomywidget==1.0a5
-# imioweb.policy==1.0b6
+eea.faceted.vocabularies = 6.9
 eea.facetednavigation = 13.5
-
-# Required by:
-# pas.plugins.imio==1.0b1
+eea.jquery = 11.1
+iaweb.mosaic = 1.0a7
+imio.patterns = 1.0a3
+imioweb.core = 1.0a3
+imioweb.policy = 1.0b6
+imioweb.theme = 1.0b8
+ipdb = 0.12.3
+ipython = 7.12.0
+ipython-genutils = 0.2.0
+jedi = 0.16.0
+parso = 0.6.1
 pas.plugins.authomatic = 1.0b201
-
-# Required by:
-# imioweb.theme==1.0b3
+pas.plugins.imio = 1.0b8
+pexpect = 4.8.0
+pickleshare = 0.7.5
+plone.app.changeownership = 1.0
+plone.app.imagecropping = 2.2.1
+plone.app.jquery = 1.11.2
 plone.app.themingplugins = 1.1
-
-# Required by:
-# collective.geolocationbehavior==1.7.0
 plone.formwidget.geolocation = 2.2.1
-
-# Required by:
-# collective.sendinblue==2.0
-Sendinblue = 2.0.5.1
 plone.formwidget.recaptcha = 2.2.0
-
+plone.patternslib = 1.1.0.3
+prompt-toolkit = 3.0.3
+ptyprocess = 0.6.0
+traitlets = 4.3.3
+wcwidth = 0.1.8
 
 ## override from https://dist.plone.org/release/5.2.1/versions.cfg
 waitress = 1.4.3
