--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       test: ['CMD', 'nc', '-z', '-w5', '127.0.0.1', '8100']
     command: zeoserver fg
   instance:
+    cap_add:
+      - SYS_PTRACE
     image: imioweb
     expose:
       - 8080
