--- a/base.cfg
+++ b/base.cfg
@@ -10,8 +10,8 @@ extends =
     sources.cfg
     versions.cfg
 
-# find-links = http://devpi.imio.be/root/imio/+findlinks
-index = http://devpi.imio.be/root/imio/+simple/
+# find-links = https://devpi.imio.be/root/imio/+findlinks
+index = https://devpi.imio.be/root/imio/+simple/
 # index = https://nexus.imio.be/repository/pypi-all/simple
 versions = versions
 
