--- a/prod.cfg
+++ b/prod.cfg
@@ -38,11 +38,11 @@ event-log-custom =
         facility local3
         format %(asctime)s $(HOSTNAME_HOST) zope[%(process)s]: $(PROJECT_ID) ${:_buildout_section_name_} [%(levelname)s] %(name)s | %(message)s
         dateformat %b %d %H:%M:%S
-        level info
+        level debug
     </syslog>
     <logfile>
         path ${buildout:directory}/var/log/${:_buildout_section_name_}.log
-        level info
+        level debug
     </logfile>
 
 [instance-debug]
@@ -59,5 +59,5 @@ zcml =
 event-log-custom =
     <logfile>
         path ${buildout:directory}/var/log/${:_buildout_section_name_}.log
-        level info
+        level debug
     </logfile>
