feat(policy): add c.prometheus

--- a/versions.cfg
+++ b/versions.cfg
@@ -14,6 +14,7 @@ collective.faceted.map = 1.0b3
 collective.faceted.taxonomywidget = 1.0a5
 collective.geolocationbehavior = 1.7.0
 collective.preventactions = 0.3.0
+collective.prometheus = 1.4.0
 collective.recipe.backup = 4.1.1
 collective.sendinblue = 2.0
 collective.taxonomy = 2.0.0
@@ -25,7 +26,7 @@ eea.jquery = 11.1
 iaweb.mosaic = 1.0a7
 imio.patterns = 1.0a3
 imioweb.core = 1.0a3
-imioweb.policy = 1.0b6
+imioweb.policy = 1.0b8
 imioweb.theme = 1.0b8
 ipdb = 0.12.3
 ipython = 7.12.0
@@ -46,7 +47,7 @@ plone.patternslib = 1.1.0.3
 prompt-toolkit = 3.0.3
 ptyprocess = 0.6.0
 traitlets = 4.3.3
-wcwidth = 0.1.8
+wcwidth = 0.1.9
 
 ## override from https://dist.plone.org/release/5.2.1/versions.cfg
 waitress = 1.4.3
