Add imio.prometheus source

--- a/sources.cfg
+++ b/sources.cfg
@@ -13,6 +13,7 @@ collective.faceted.taxonomywidget = git ${remotes:imio}/collective.faceted.taxon
 imioweb.policy = git ${remotes:imio}/imioweb.policy.git pushurl=${remotes:imio_push}/imioweb.policy.git
 imioweb.core = git ${remotes:imio}/imioweb.core.git pushurl=${remotes:imio_push}/imioweb.core.git
 imioweb.theme = git ${remotes:imio}/imioweb.theme.git pushurl=${remotes:imio_push}/imioweb.theme.git
+imio.prometheus = git ${remotes:imio}/imio.prometheus.git pushurl=${remotes:imio_push}/imio.prometheus.git
 collective.behavior.banner = git ${remotes:collective}/collective.behavior.banner.git pushurl=${remotes:collective_push}/collective.behavior.banner.git
 iaweb.mosaic = git ${remotes:imio}/iaweb.mosaic.git pushurl=${remotes:imio_push}/iaweb.mosaic.git
 collective.preventactions = git ${remotes:collective}/collective.preventactions.git pushurl=${remotes:collective_push}/collective.preventactions.git
