--- a/dev.cfg
+++ b/dev.cfg
@@ -15,6 +15,7 @@ auto-checkout =
     pas.plugins.imio
     pas.plugins.authomatic
     collective.faceted.map
+    imio.prometheus
 
 [instance]
 debug-mode = on
@@ -22,3 +23,16 @@ verbose-security = on
 user = admin:admin
 eggs +=
     ${debug-products:eggs}
+
+zcml-additional +=
+  <configure xmlns="http://namespaces.zope.org/zope"
+             xmlns:plone="http://namespaces.plone.org/plone">
+  <plone:CORSPolicy
+    allow_origin="http://localhost:8000,http://127.0.0.1:8000,http://localhost:9000,http://127.0.0.1:9000,http://localhost:3000,http://127.0.0.1:3000"
+    allow_methods="DELETE,GET,OPTIONS,PATCH,POST,PUT"
+    allow_credentials="true"
+    expose_headers="Content-Length,X-My-Header"
+    allow_headers="Accept,Authorization,Content-Type,X-Custom-Header"
+    max_age="3600"
+    />
+  </configure>
