--- a/versions.cfg
+++ b/versions.cfg
@@ -25,8 +25,9 @@ eea.facetednavigation = 13.5
 eea.jquery = 11.1
 iaweb.mosaic = 1.0a7
 imio.patterns = 1.0a3
+imio.prometheus= 1.0a1
 imioweb.core = 1.0a3
-imioweb.policy = 1.0b8
+imioweb.policy = 1.0b9
 imioweb.theme = 1.0b8
 ipdb = 0.12.3
 ipython = 7.12.0
