--- a/versions.cfg
+++ b/versions.cfg
@@ -12,6 +12,7 @@ collective.behavior.gallery = 1.0a6
 collective.easyform = 2.1.3
 collective.faceted.map = 1.0b3
 collective.faceted.taxonomywidget = 1.0a5
+collective.folderishtypes = 3.0.0
 collective.geolocationbehavior = 1.7.0
 collective.preventactions = 0.3.0
 collective.prometheus = 1.4.0
