Update pas.plugin.imio to used latest version

--- a/versions.cfg
+++ b/versions.cfg
@@ -36,7 +36,7 @@ ipython-genutils = 0.2.0
 jedi = 0.16.0
 parso = 0.6.1
 pas.plugins.authomatic = 1.0b201
-pas.plugins.imio = 1.0b11
+pas.plugins.imio = 1.0.4
 pexpect = 4.8.0
 pickleshare = 0.7.5
 plone.app.changeownership = 1.0
