Added collective.anysurer in auto-checkout/sources + reordered auto-checkout and sources

--- a/dev.cfg
+++ b/dev.cfg
@@ -8,14 +8,15 @@ extensions =
 always-checkout = force
 
 auto-checkout =
-    imioweb.policy
-    imioweb.core
-    imioweb.theme
+    collective.anysurfer
+    collective.faceted.map
     collective.upgrade
+    imioweb.core
+    imioweb.policy
+    imio.prometheus
+    imioweb.theme
     pas.plugins.imio
     pas.plugins.authomatic
-    collective.faceted.map
-    imio.prometheus
 
 [instance]
 debug-mode = on
