--- a/sources.cfg
+++ b/sources.cfg
@@ -10,17 +10,19 @@ affinitic_push = git@github.com:affinitic
 [sources]
 # from IMIO
 collective.faceted.taxonomywidget = git ${remotes:imio}/collective.faceted.taxonomywidget.git pushurl=${remotes:imio_push}/collective.faceted.taxonomywidget.git
-imioweb.policy = git ${remotes:imio}/imioweb.policy.git pushurl=${remotes:imio_push}/imioweb.policy.git
-imioweb.core = git ${remotes:imio}/imioweb.core.git pushurl=${remotes:imio_push}/imioweb.core.git
-imioweb.theme = git ${remotes:imio}/imioweb.theme.git pushurl=${remotes:imio_push}/imioweb.theme.git
-imio.prometheus = git ${remotes:imio}/imio.prometheus.git pushurl=${remotes:imio_push}/imio.prometheus.git
-collective.behavior.banner = git ${remotes:collective}/collective.behavior.banner.git pushurl=${remotes:collective_push}/collective.behavior.banner.git
 iaweb.mosaic = git ${remotes:imio}/iaweb.mosaic.git pushurl=${remotes:imio_push}/iaweb.mosaic.git
-collective.preventactions = git ${remotes:collective}/collective.preventactions.git pushurl=${remotes:collective_push}/collective.preventactions.git
-collective.taxonomy = git ${remotes:collective}/collective.taxonomy.git pushurl=${remotes:collective_push}/collective.taxonomy.git
-collective.upgrade = git ${remotes:collective}/collective.upgrade.git pushurl=${remotes:collective_push}/collective.upgrade.git
-collective.privacy = git ${remotes:collective}/collective.privacy.git pushurl=${remotes:collective_push}/collective.privacy.git
+imio.prometheus = git ${remotes:imio}/imio.prometheus.git pushurl=${remotes:imio_push}/imio.prometheus.git
+imioweb.core = git ${remotes:imio}/imioweb.core.git pushurl=${remotes:imio_push}/imioweb.core.git
+imioweb.policy = git ${remotes:imio}/imioweb.policy.git pushurl=${remotes:imio_push}/imioweb.policy.git
+imioweb.theme = git ${remotes:imio}/imioweb.theme.git pushurl=${remotes:imio_push}/imioweb.theme.git
 pas.plugins.imio = git ${remotes:imio}/pas.plugins.imio.git pushurl=${remotes:imio_push}/pas.plugins.imio.git
 pas.plugins.authomatic = git ${remotes:imio}/pas.plugins.authomatic.git pushurl=${remotes:imio_push}/pas.plugins.authomatic.git
-
+# from COLLECTIVE
+collective.anysurfer = git ${remotes:collective}/collective.anysurfer.git pushurl=${remotes:collective_push}/collective.anysurfer.git branch=plone5
+collective.behavior.banner = git ${remotes:collective}/collective.behavior.banner.git pushurl=${remotes:collective_push}/collective.behavior.banner.git
+collective.preventactions = git ${remotes:collective}/collective.preventactions.git pushurl=${remotes:collective_push}/collective.preventactions.git
+collective.privacy = git ${remotes:collective}/collective.privacy.git pushurl=${remotes:collective_push}/collective.privacy.git
+collective.taxonomy = git ${remotes:collective}/collective.taxonomy.git pushurl=${remotes:collective_push}/collective.taxonomy.git
+collective.upgrade = git ${remotes:collective}/collective.upgrade.git pushurl=${remotes:collective_push}/collective.upgrade.git
+# from AFFINITIC
 collective.faceted.map = git ${remotes:affinitic}/collective.faceted.map.git pushurl=${remotes:affinitic_push}/collective.faceted.map.git
