[WEB-3382] Added collective.anysurfer = 1.3.4 to buildout

--- a/base.cfg
+++ b/base.cfg
@@ -25,6 +25,7 @@ environment-vars =
 eggs =
     Plone
     imioweb.policy
+    collective.anysurfer
     collective.upgrade
 zcml =
     imioweb.policy
