No more plone5 branch for collective.anysurfer. (Merged with master)

--- a/sources.cfg
+++ b/sources.cfg
@@ -18,7 +18,7 @@ imioweb.theme = git ${remotes:imio}/imioweb.theme.git pushurl=${remotes:imio_pus
 pas.plugins.imio = git ${remotes:imio}/pas.plugins.imio.git pushurl=${remotes:imio_push}/pas.plugins.imio.git
 pas.plugins.authomatic = git ${remotes:imio}/pas.plugins.authomatic.git pushurl=${remotes:imio_push}/pas.plugins.authomatic.git
 # from COLLECTIVE
-collective.anysurfer = git ${remotes:collective}/collective.anysurfer.git pushurl=${remotes:collective_push}/collective.anysurfer.git branch=plone5
+collective.anysurfer = git ${remotes:collective}/collective.anysurfer.git pushurl=${remotes:collective_push}/collective.anysurfer.git
 collective.behavior.banner = git ${remotes:collective}/collective.behavior.banner.git pushurl=${remotes:collective_push}/collective.behavior.banner.git
 collective.preventactions = git ${remotes:collective}/collective.preventactions.git pushurl=${remotes:collective_push}/collective.preventactions.git
 collective.privacy = git ${remotes:collective}/collective.privacy.git pushurl=${remotes:collective_push}/collective.privacy.git
