buildout: add find-links

--- a/base.cfg
+++ b/base.cfg
@@ -10,6 +10,10 @@ extends =
     sources.cfg
     versions.cfg
 
+
+find-links +=
+    https://eggs.imio.be/find-links/common
+
 versions = versions
 
 [instance]
