--- a/versions.cfg
+++ b/versions.cfg
@@ -12,7 +12,7 @@ collective.behavior.banner = 1.2
 collective.behavior.gallery = 1.0a6
 collective.easyform = 2.1.3
 collective.faceted.map = 1.0b3
-collective.faceted.taxonomywidget = 1.0a5
+collective.faceted.taxonomywidget = 1.0a6
 collective.folderishtypes = 3.0.0
 collective.geolocationbehavior = 1.7.0
 collective.preventactions = 0.3.0
@@ -25,9 +25,9 @@ cryptography = 2.8
 eea.faceted.vocabularies = 6.9
 eea.facetednavigation = 13.5
 eea.jquery = 11.1
-iaweb.mosaic = 1.0a7
+iaweb.mosaic = 1.0.0
 imio.patterns = 1.0a3
-imio.prometheus= 1.0b1
+imio.prometheus= 1.0.0
 imioweb.core = 1.0a3
 imioweb.policy = 1.0b9
 imioweb.theme = 1.0b8
@@ -36,8 +36,8 @@ ipython = 7.12.0
 ipython-genutils = 0.2.0
 jedi = 0.16.0
 parso = 0.6.1
-pas.plugins.authomatic = 1.0b201
-pas.plugins.imio = 1.0.4
+pas.plugins.authomatic = 1.0b1
+pas.plugins.imio = 1.0.5
 pexpect = 4.8.0
 pickleshare = 0.7.5
 plone.app.changeownership = 1.0
@@ -46,7 +46,7 @@ plone.app.jquery = 1.11.2
 plone.app.themingplugins = 1.1
 plone.formwidget.geolocation = 2.2.1
 plone.formwidget.recaptcha = 2.2.0
-plone.patternslib = 1.1.0.3
+plone.patternslib = 1.2.0.2
 prompt-toolkit = 3.0.3
 ptyprocess = 0.6.0
 traitlets = 4.3.3
