buildout: add formwidget sources

--- a/sources.cfg
+++ b/sources.cfg
@@ -24,5 +24,7 @@ collective.preventactions = git ${remotes:collective}/collective.preventactions.
 collective.privacy = git ${remotes:collective}/collective.privacy.git pushurl=${remotes:collective_push}/collective.privacy.git
 collective.taxonomy = git ${remotes:collective}/collective.taxonomy.git pushurl=${remotes:collective_push}/collective.taxonomy.git
 collective.upgrade = git ${remotes:collective}/collective.upgrade.git pushurl=${remotes:collective_push}/collective.upgrade.git
+collective.upgrade = git ${remotes:collective}/collective.upgrade.git pushurl=${remotes:collective_push}/collective.upgrade.git
+plone.formwidget.geolocation = git ${remotes:collective}/plone.formwidget.geolocation.git pushurl=${remotes:collective_push}/plone.formwidget.geolocation.git
 # from AFFINITIC
 collective.faceted.map = git ${remotes:affinitic}/collective.faceted.map.git pushurl=${remotes:affinitic_push}/collective.faceted.map.git
