Added collective.messagesviewlet and pinned collective.behavior.banner = 1.3

--- a/base.cfg
+++ b/base.cfg
@@ -27,8 +27,10 @@ eggs =
     Plone
     imioweb.policy
     collective.anysurfer
+    collective.messagesviewlet
     collective.upgrade
 zcml =
+    collective.messagesviewlet
     imioweb.policy
 
 [omelette]
