--- a/versions.cfg
+++ b/versions.cfg
@@ -7,13 +7,14 @@ Products.validation = 2.1.1
 Sendinblue = 2.0.5.1
 backcall = 0.1.0
 collective.anysurfer = 1.4.2
-collective.behavior.banner = 1.2
+collective.behavior.banner = 1.3
 collective.behavior.gallery = 1.0a6
 collective.easyform = 2.1.3
 collective.faceted.map = 1.0b3
 collective.faceted.taxonomywidget = 1.0a7
 collective.folderishtypes = 3.0.0
 collective.geolocationbehavior = 1.7.0
+collective.messagesviewlet = 0.23
 collective.preventactions = 0.3.0
 collective.prometheus = 1.4.0
 collective.recipe.backup = 4.1.1
