--- a/versions.cfg
+++ b/versions.cfg
@@ -9,6 +9,7 @@ backcall = 0.1.0
 collective.anysurfer = 1.4.2
 collective.behavior.banner = 1.3
 collective.behavior.gallery = 1.0a6
+collective.behavior.talcondition = 0.14
 collective.easyform = 2.1.3
 collective.faceted.map = 1.0b3
 collective.faceted.taxonomywidget = 1.0a7
