--- a/sources.cfg
+++ b/sources.cfg
@@ -1,9 +1,9 @@
 [remotes]
-imio = git://github.com/IMIO
+imio = https://github.com/IMIO
 imio_push = git@github.com:IMIO
-collective = git://github.com/collective
+collective = https://github.com/collective
 collective_push = git@github.com:collective
-affinitic = git://github.com/affinitic
+affinitic = https://github.com/affinitic
 affinitic_push = git@github.com:affinitic
 
 
