--- a/versions.cfg
+++ b/versions.cfg
@@ -1,6 +1,6 @@
 [versions]
-setuptools = 45.0.0
-zc.buildout = 2.13.2
+setuptools = 42.0.2
+zc.buildout = 2.13.3
 
 Authomatic = 1.0.0
 Products.validation = 2.1.1
@@ -22,7 +22,7 @@ collective.recipe.backup = 4.1.1
 collective.sendinblue = 2.0
 collective.taxonomy = 2.0.0
 collective.upgrade = 1.6
-cryptography = 2.8
+cryptography = 3.4
 eea.faceted.vocabularies = 6.9
 eea.facetednavigation = 13.5
 eea.jquery = 11.1
@@ -36,8 +36,9 @@ ipdb = 0.12.3
 ipython = 7.12.0
 ipython-genutils = 0.2.0
 jedi = 0.16.0
+jwcrypto = 1.5.6
 parso = 0.6.1
-pas.plugins.authomatic = 1.0b201
+pas.plugins.authomatic = 1.2.0
 pas.plugins.imio = 1.0.5
 pexpect = 4.8.0
 pickleshare = 0.7.5
@@ -50,8 +51,16 @@ plone.formwidget.recaptcha = 2.2.0
 plone.patternslib = 1.2.0.2
 prompt-toolkit = 3.0.3
 ptyprocess = 0.6.0
+semantic-version = 2.10.0
+# setuptools-rust = 1.8.1
+setuptools-rust = 0.11.6
+tomli = 2.0.1
 traitlets = 4.3.3
 wcwidth = 0.1.9
 
 ## override from https://dist.plone.org/release/5.2.1/versions.cfg
 waitress = 1.4.3
+
+typing-extensions = 4.11.0
+
+
